--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(sw-protocol)
 add_subdirectory(thirdparty/tinyxml)
+
+project(sw-protocol)
 set(THRID_PARTY_DIR  ./thirdparty)
 include_directories(
 ${THRID_PARTY_DIR}
@@ -14,9 +15,9 @@ add_executable(${PROJECT_NAME}
     ${SW_PROTOCOL_LIST_FILES}
     ${SW_LIST_FILES}
 )
-target_link_libraries(${PROJECT_NAME} tinyxml2.a)
+target_link_libraries(${PROJECT_NAME} tinyxml2)
 
-set(CMAKE_CXX_COMPILER "/usr/local/gcc/bin/g++")
+#SET(CMAKE_CXX_COMPILER "/usr/lib/gcc/x86_64-redhat-linux/10.2.0/bin/g++")
 SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
 SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
-set(CMAKE_CXX_FLAGS "-std=c++14")
+set(CMAKE_CXX_FLAGS "-std=c++14 -static-libgcc -static-libstdc++")
