--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /build/windows/x64/Debug
+/build/windows/.vs/obj-conv/v16
+/x64/Debug
