--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,18 @@ cmake_minimum_required(VERSION 3.10.0)
 SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
 SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
 set(CMAKE_CXX_FLAGS "-std=c++17 -static-libgcc -static-libstdc++")
-project(sw-protocol)
+project(reflex-format)
 set(THRID_PARTY_DIR  ${PROJECT_SOURCE_DIR}/thirdparty)
 include_directories(
 ${THRID_PARTY_DIR}
 ${PROJECT_SOURCE_DIR}
 )
-aux_source_directory(./sw-protocol SW_PROTOCOL_LIST_FILES)
-aux_source_directory(. SW_LIST_FILES)
+aux_source_directory(./reflex_format REFLEX_FORMAT_LIST_FILES)
+aux_source_directory(. REFLEX_LIST_FILES)
 add_executable(${PROJECT_NAME} 
-    ${SW_PROTOCOL_LIST_FILES}
-    ${SW_LIST_FILES}
+    ${REFLEX_FORMAT_LIST_FILES}
+    ${REFLEX_LIST_FILES}
 )
 target_link_libraries(${PROJECT_NAME} tinyxml2)
 add_subdirectory(thirdparty/tinyxml)
-add_subdirectory(test)
+add_subdirectory(unit_test)
