1.扩展variant功能 2.修复类型识别错误bug 3.完善单元测试示例 4.修改tuple遍历问题 5.优化基础模板匹配

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 ################################################################################
 
 /build/windows/x64/Debug
-/build/windows/.vs/obj-conv/v16
+/build/windows/.vs
 /x64/Debug
