文件读取错误问题修复 1.修复读取json空文件或者不存在文件bug 2.补充读取文件操作单元测试样本 3.删除潜在重置问题

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
 ################################################################################
 
-/build/windows/x64/Debug
+/x64/
+/build/windows/x64/
 /build/windows/.vs
-/x64/Debug
+/build/windows/unit-test/x64
+*.runsettings
+/.vscode/
